# Slimminer-OpenCL

./: Makefile.am  README.md  configure.ac  cpu-miner.c  cpuminer-config.h  dcrypt.c  dcrypt.cl  dcrypt.h  example-cfg.json  gpu.c  gpu.h  miner.h  util.c
